Another alignment fix.

--- a/pgaweb/static/css/pgaweb.scss
+++ b/pgaweb/static/css/pgaweb.scss
@@ -1170,10 +1170,11 @@ html[data-theme="dark"] .pga-docbody .svg-inline--fa {
     }
 }
 
-/* Ad column containers - align ads to outer edges */
+/* Ad column containers - align ads to outer edges and clip overflow */
 .ad-col-left {
     display: flex;
     justify-content: flex-start; /* Push ads to left edge */
+    overflow: hidden; /* Clip any overflow on the right */
 
     .ad-sidebar {
         margin-left: 0;
@@ -1184,6 +1185,7 @@ html[data-theme="dark"] .pga-docbody .svg-inline--fa {
 .ad-col-right {
     display: flex;
     justify-content: flex-end; /* Push ads to right edge */
+    overflow: hidden; /* Clip any overflow on the left */
 
     .ad-sidebar {
         margin-left: auto;
